# audio_transcription_automatization

./: .gitignore  README.md  build_exe.py  prueba_output.txt  pyproject.toml
src/: build_exe.py  logger.py  main.py  main_console.py
src/audio/: __init__.py  loader.py  recorder.py
src/gui/: __init__.py  gui_app.py
src/options/: __init__.py  option1.py  option2.py
src/output/: __init__.py  clipboard.py  text_file.py
src/transcription/: __init__.py  transcriber.py
tests/: conftest.py  demo_project.py  test_basic.py  test_project.py
tests/audio/: create_test_audio.py
tests/pytest/: test_gui.py  test_integration_realtime.py  test_loader_extra.py  test_options.py  test_recorder.py  test_transcriber_extra.py
