[project]
name = "audio"
version = "2.0.0"
description = "Aplicación de transcripción de audio con Whisper AI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "pyinstaller>=6.18.0",
    "pyperclip>=1.11.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
]
